@@ -2,6 +2,7 @@
 ==========
 hcxpcaptool skip unknown option (thanks to magnumripper)
 hcxpcaptool detect Wilibox Delibrant Group LLC authentication
+hcxpcaptool detect NETWORK EAP authentication system
 
 
 07.08.2018
